--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=Hospital
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost/hospital?useSSL=false&serverTimezone=Asia/Taipei&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=
